<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartingText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_groupQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q1Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op1" />

                <RadioButton
                    android:id="@+id/q1Option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op2" />

                <RadioButton
                    android:id="@+id/q1Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op3" />

                <RadioButton
                    android:id="@+id/q1Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radio_groupQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q2Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op1" />

                <RadioButton
                    android:id="@+id/q2Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op2" />

                <RadioButton
                    android:id="@+id/q2Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op3" />

                <RadioButton
                    android:id="@+id/q2Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radio_groupQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q3Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3Op1" />

                <RadioButton
                    android:id="@+id/q3Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3Op2" />

                <RadioButton
                    android:id="@+id/q3Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3Op3" />

                <RadioButton
                    android:id="@+id/q3Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <RadioGroup
                android:id="@+id/radio_groupQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q4Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4Op1" />

                <RadioButton
                    android:id="@+id/q4Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4Op2" />

                <RadioButton
                    android:id="@+id/q4Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4Op3" />

                <RadioButton
                    android:id="@+id/q4Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <RadioGroup
                android:id="@+id/radio_groupQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q5Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5Op1" />

                <RadioButton
                    android:id="@+id/q5Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5Op2" />

                <RadioButton
                    android:id="@+id/q5Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3Op3" />

                <RadioButton
                    android:id="@+id/q5Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <RadioGroup
                android:id="@+id/radio_groupQ6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q6Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op1" />

                <RadioButton
                    android:id="@+id/q6Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op2" />

                <RadioButton
                    android:id="@+id/q6Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op3" />

                <RadioButton
                    android:id="@+id/q6Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radio_groupQ7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question7"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q7Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question7Op1" />

                <RadioButton
                    android:id="@+id/q7Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question7Op2" />

                <RadioButton
                    android:id="@+id/q7Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question7Op3" />

                <RadioButton
                    android:id="@+id/q7Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question7Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radio_groupQ8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question8"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q8Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question8Op1" />

                <RadioButton
                    android:id="@+id/q8Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question8Op2" />

                <RadioButton
                    android:id="@+id/q8Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question8Op3" />

                <RadioButton
                    android:id="@+id/q8Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question8Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get Selected Color"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>