<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizLevel1Fragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textStyle="bold|italic"
                android:text="@string/quizLevel1" />
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radio_groupQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/titleQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q1Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op1" />

                <RadioButton
                    android:id="@+id/q1Option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op2" />

                <RadioButton
                    android:id="@+id/q1Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op3" />

                <RadioButton
                    android:id="@+id/q1Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1Op4" />
            </RadioGroup>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:id="@+id/radio_groupQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/titleQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q2Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op1" />

                <RadioButton
                    android:id="@+id/q2Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op2" />

                <RadioButton
                    android:id="@+id/q2Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op3" />

                <RadioButton
                    android:id="@+id/q2Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2Op4" />
            </RadioGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"

                android:background="@drawable/button_oval"
                android:drawableRight="@drawable/enter"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:text="@string/submit"
                android:textColor="#29395e"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_nextLvl"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"

                android:background="@drawable/button_oval"
                android:drawableRight="@mipmap/next_page"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:text="@string/NextLvL"
                android:textColor="#29395e"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>