<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizLevel3Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textStyle="bold|italic"
                android:text="@string/quizLevel3" />
            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <RadioGroup
                android:id="@+id/radio_groupQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q5Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5Op1" />

                <RadioButton
                    android:id="@+id/q5Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5Op2" />

                <RadioButton
                    android:id="@+id/q5Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3Op3" />

                <RadioButton
                    android:id="@+id/q5Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <RadioGroup
                android:id="@+id/radio_groupQ6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/titleQ6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q6Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op1" />

                <RadioButton
                    android:id="@+id/q6Optio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op2" />

                <RadioButton
                    android:id="@+id/q6Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op3" />

                <RadioButton
                    android:id="@+id/q6Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6Op4" />
            </RadioGroup>
            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btnSubmit1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"

                android:background="@drawable/button_oval"
                android:drawableRight="@drawable/enter"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:text="@string/submit"
                android:textColor="#29395e"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_nextLvl"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"

                android:background="@drawable/button_oval"
                android:drawableRight="@mipmap/next_page"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:text="@string/NextLvL"
                android:textColor="#29395e"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>